# triples

./: .gitignore  Cargo.toml  LICENSE  Makefile  README  output_new.txt  output_old.txt
examples/benchmark/: Cargo.toml
examples/benchmark/src/: main.rs
examples/big_limits/: Cargo.toml
examples/big_limits/src/: main.rs
examples/iterators/: .gitignore  Cargo.toml
examples/iterators/src/: main.rs
examples/print_triples/: .gitignore  Cargo.toml
examples/print_triples/src/: main.rs
examples/save_on_file/: Cargo.toml
examples/save_on_file/src/: main.rs
old_code/: main  main.c
src/: berggren.rs  euclide.rs  main.rs  main.test.rs  shader.wgsl
src/methods/: mod.rs
triples/: Cargo.toml
triples/src/: berggren.rs  euclid.rs  euclide.rs  lib.rs  utils.rs
